<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="directon">directon</string>
    <string name="hello">Hello</string>
    <string name="thank_you">Thank You</string>
    <string name="button1" />
    <string name="button2" />
    <string name="button3" />
    <string name="button4" />
    <string name="button5" />
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="food">Food</string>
    <string name="feelings">Feelings</string>
    <string name="info">info</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="cerial">Cerial</string>
    <string name="pizza">Pizza</string>
    <string name="chicken">Chicken</string>
    <string name="burger">Burger</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="exited">Exited</string>
    <string name="disgusted">Disgusted</string>
    <string name="sleepy">Sleepy</string>
    <string name="cookies">Cookies</string>
    <string name="chips">Chips</string>
    <string name="bathroom">Bathroom</string>
    <string name="home">Home</string>
    <string name="playground">Playground</string>
    <string name="shop">Shop</string>
    <string name="garden">Garden</string>
    <string name="park">Park</string>
    <string name="i_want_to_go">I want to go</string>
    <string name="i_feel">I Feel</string>
    <string name="about_me">About me</string>
    <string name="emergency">Emergency</string>
    <string name="about_myself">About Myself</string>
    <string name="i_want_to">I Want to</string>
    <string name="i_feell" />
    <string name="about_user">About User</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="medical_information">Medical information</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="tired">Tired</string>
</resources>