<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Direction">

    <Button
        android:id="@+id/button23"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="72dp"
        android:drawableTop="@drawable/ic_toilet__1_"
        android:text="@string/bathroom"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button24"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:drawableTop="@drawable/ic_home_icon_silhouette"
        android:text="@string/home"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="200dp"
        android:drawableTop="@drawable/ic_park"
        android:text="@string/park"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button26"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:drawableTop="@drawable/ic_toboggan"
        android:text="@string/playground"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button27"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="336dp"
        android:drawableTop="@drawable/ic_shop"
        android:text="@string/shop"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button28"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:drawableTop="@drawable/ic_gardening"
        android:text="@string/garden"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>